--- a/.classpath
+++ b/.classpath
@@ -33,10 +33,26 @@
 	<classpathentry kind="lib" path="lib/morfologik-fsa-builders-2.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/morfologik-stemming-2.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/morfologik-tools-2.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/opennlp-brat-annotator-1.9.1.jar"/>
-	<classpathentry kind="lib" path="lib/opennlp-morfologik-addon-1.9.1.jar"/>
-	<classpathentry kind="lib" path="lib/opennlp-tools-1.9.1.jar"/>
-	<classpathentry kind="lib" path="lib/opennlp-uima-1.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/opennlp-brat-annotator-1.9.1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="https://opennlp.apache.org/docs/1.9.1/apidocs/opennlp-brat-annotator/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/opennlp-morfologik-addon-1.9.1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="https://opennlp.apache.org/docs/1.9.1/apidocs/opennlp-morfologik-addon/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/opennlp-tools-1.9.1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="https://opennlp.apache.org/docs/1.9.1/apidocs/opennlp-tools/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/opennlp-uima-1.9.1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="https://opennlp.apache.org/docs/1.9.1/apidocs/opennlp-uima/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/osgi-resource-locator-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
